tests/NormalTests/paczka1/small_fuzzy/93495547.err
Error in line 1: Ix0g1HMs A823 88,8
Error in line 4: cLIQ8uedhY A823 84,7
Error in line 13: nTsMAIXoq65 A257 95,4
Error in line 14: nTsMAIXoq65 S450 29,9
